Translate recipe page

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -96,20 +96,20 @@
     <div class="container">
       <div class="row">
         <div class="col s12 m6">
-          <h3 class="section-header">Zutaten</h3>
+          <h3 class="section-header" lng-tag="ingredients">Zutaten</h3>
           <div class="ingredient-image"><img src="../images/recipe-goiaba.jpg" alt="bolo de rolo recipe image"></div>
         </div>
         <div class="col s12 m6">
-          <h3><span class="handwriting">Nur 4 Zutaten und eine Füllung!</span></h3>
+          <h3><span class="handwriting" lng-tag="ingredients-headline">Nur 4 Zutaten und eine Füllung!</span></h3>
           <ul id="ingredients">
-            <li>Butter - 250 g</li>
-            <li>Zucker - 250 g</li>
-            <li>Weizenmehl - 250 g</li>
-            <li>Eier - 6</li>
-            <li>Goiabada (Guaven-Marmelade) - 1 Glas</li>
+            <li lng-tag="butter">Butter - 250 g</li>
+            <li lng-tag="sugar">Zucker - 250 g</li>
+            <li lng-tag="flour">Weizenmehl - 250 g</li>
+            <li lng-tag="eggs">Eier - 6</li>
+            <li lng-tag="goiabada">Goiabada (Guaven-Marmelade) - 1 Glas</li>
           </ul>
-          <p>Ich mag besonders Bio-Zutaten - das würde ich euch auch empfehlen. Vollkornprodukte habe ich jedoch nicht ausprobiert, da ich recht nah am Original-Rezept bleiben möchte.</p>
-          <p>Die Füllung - also die Marmelade, kann man natürlich auch selbst machen, aber leider bekommt man in Berlin nur schwer frische Guaven. Wenn ihr natürlich an Früchte kommen könnt, dann macht die Marmelade gerne selbst. Die Einzige Voraussetzung ist, dass sie wirklich recht dick ist, so dass ihr sie gut verstreichen könnt, ohne den Teig zu durchweichen.</p>
+          <p lng-tag="ingredients-expl1">Ich mag besonders Bio-Zutaten - das würde ich euch auch empfehlen. Vollkornprodukte habe ich jedoch nicht ausprobiert, da ich recht nah am Original-Rezept bleiben möchte.</p>
+          <p lng-tag="ingredients-expl2">Die Füllung - also die Marmelade, kann man natürlich auch selbst machen, aber leider bekommt man in Berlin nur schwer frische Guaven. Wenn ihr natürlich an Früchte kommen könnt, dann macht die Marmelade gerne selbst. Die Einzige Voraussetzung ist, dass sie wirklich recht dick ist, so dass ihr sie gut verstreichen könnt, ohne den Teig zu durchweichen.</p>
         </div>
       </div>
     </div>
@@ -119,10 +119,10 @@
     <div class="container">
       <div class="row">
         <div class="col s12 m12">
-          <h3 class="section-header">Anleitung</h3>
+          <h3 class="section-header" lng-tag="instructions">Anleitung</h3>
         </div>
         <div class="col s12 m5">
-          <p>Die Herstellung ist etwas aufwendig und nicht ganz leicht, aber es lohnt sich und ihr bekommt mit einem Schlag sogar gleich zwei Kuchen à ca. 600g.</p>
+          <p lng-tag="instruct-step1">Die Herstellung ist etwas aufwendig und nicht ganz leicht, aber es lohnt sich und ihr bekommt mit einem Schlag sogar gleich zwei Kuchen à ca. 600g.</p>
           <div class="row">
             <div class="col s3 m3 right-align">
               <p><img class="characteristics" src="../images/clock-regular.svg"></p>
@@ -130,20 +130,20 @@
               <p><img class="characteristics" src="../images/cat-solid.svg"></p>
             </div>
             <div class="col s9 m9 left-align">
-              <p>60-90 min<p>
-              <p>schwer</p>
-              <p>min 10 Portionen</p>
+              <p lng-tag="time">60-90 min<p>
+              <p lng-tag="difficult">schwer</p>
+              <p lng-tag="portions">min 10 Portionen</p>
             </div>
           </div>
         </div>
         <div class="col s12 m6">
-          <h3><span class="handwriting recipe-step">1 Zucker-Butter-Masse</span></h3>
-          <p>
+          <h3 lng-tag="ingredients-step-header2"><span class="handwriting recipe-step">1 Zucker-Butter-Masse</span></h3>
+          <p lng-tag="instruct-step2">
             Zunächst die weiche Butter (250g) in kleinen Stückchen in eine Schüssel geben.
             250g Zucker ebenfalls in die Schüssel geben.
             Mit einer Gabel den Zucker mit der Butter cremig vermengen. Dazu einfach mit der Gabel den Zucker in die Butter drücken.
           </p>
-          <p class="hint">
+          <p class="hint" lng-tag="instruct-step2-hint">
             <span class="hint-header">Tipp: </span>Falls die Butter zu fest ist, kann man sie im Backofen auch ein wenig an schmelzen. Achtung! sie sollte nur weich nicht flüssig sein, da sonst der Teig später zu fest wird.
           </p>
         </div>
@@ -155,8 +155,8 @@
     <div class="container">
       <div class="row">
         <div class="col s12 m6">
-          <h3><span class="handwriting recipe-step">2 Jetzt die Eier</span></h3>
-          <p>Nun nacheinander die 6 Eier hinzugeben. Nach jedem Ei umrühren und erst danach das nächste Ei einrühren.</p>
+          <h3 lng-tag="ingredients-step-header3"><span class="handwriting recipe-step">2 Jetzt die Eier</span></h3>
+          <p lng-tag="instruct-step3">Nun nacheinander die 6 Eier hinzugeben. Nach jedem Ei umrühren und erst danach das nächste Ei einrühren.</p>
         </div>
       </div>
     </div>
@@ -168,11 +168,11 @@
       <div class="row">
         <div class="col s12 m5">
           <div class="ingredient-image padding-top"><img src="../images/mini-bolos.jpeg" alt="a lot of small cakes"></div>
-          <p class="hint">Wenn ihr jeweils nur zwei Teige einrollt, dann könnt ihr so kleine Kuchensnacks backen. :)</p>
+          <p class="hint" lng-tag="instruct-step3-hint">Wenn ihr jeweils nur zwei Teige einrollt, dann könnt ihr so kleine Kuchensnacks backen. :)</p>
         </div>
         <div class="col s12 m7">
-          <h3><span class="handwriting recipe-step">3 Jetzt das Mehl</span></h3>
-          <p>
+          <h3 lng-tag="instruct-step-header4"><span class="handwriting recipe-step">3 Jetzt das Mehl</span></h3>
+          <p lng-tag="instruct-step4">
             Zu aller letzt 250 g durch ein Sieb zur Eier-Zucker-Butter Masse geben und verrühren. Der Teig sollte jetzt nicht zu fest, aber auch nicht flüssig sein. Er sollte cremig sein.
           </p>
         </div>
@@ -187,11 +187,11 @@
           <div class="ingredient-image padding-top"><img src="../images/step-4.jpeg" alt="cake dough"></div>
         </div>
         <div class="col s12 m7">
-          <h3><span class="handwriting recipe-step">4 Vorbereitung der Teige</span></h3>
-          <p>
+          <h3 lng-tag="instruct-step-header5"><span class="handwriting recipe-step">4 Vorbereitung der Teige</span></h3>
+          <p lng-tag="instruct-step5">
             Der Teig kann nun endlich auf das Backblech verteilt werden. Hierzu kleckst du ca. 4-5 Esslöffel Teig auf das Backpapier und verteilst es vorsichtig mit einem Crepe Verteiler. Der Teig sollte sehr dünn wie ein Crepe sein und gleichmäßig verteilt. Aus dem Teig solltest du ca. 5 Teige herstellen können.
           </p>
-          <p class="hint"><span class="hint-header">Tipp: </span>Falls du mehrere Bleche und wiederverwendbares Backpapier eins zur Hand hast, dann kannst du schon mehrere Teige vorbereiten.</p>
+          <p class="hint" lng-tag="instruct-step5-hint"><span class="hint-header">Tipp: </span>Falls du mehrere Bleche und wiederverwendbares Backpapier eins zur Hand hast, dann kannst du schon mehrere Teige vorbereiten.</p>
         </div>
       </div>
     </div>
@@ -204,10 +204,10 @@
           <div class="ingredient-image padding-top"><img src="../images/step-5.jpeg" alt="cake baking"></div>
         </div>
         <div class="col s12 m7">
-          <h3><span class="handwriting recipe-step">5 Backen und Füllung</span></h3>
-          <p>
+          <h3 lng-tag="instruct-step-header6"><span class="handwriting recipe-step">5 Backen und Füllung</span></h3>
+          <p lng-tag="instruct-step6">
             Das Backblech mit dem Teig im vorgeheizten Backofen bei 170 Grad (Umluft) ca. 7 min backen. Immer mal wieder in den Ofen schauen. Der Teig darf nicht zu kross gebacken werden, da er sich dann nicht mehr rollen lässt und zerbricht. Er ist fertig, wenn keine feuchten Stellen mehr zu sehen sind, der Teig noch nicht braun ist und eine durchgängige Biskuitschicht mit kleinen Bläschen gebildet hat.</p>
-          <p class="hint"><span class="hint-header">Tipp: </span>Am Rand des Backblechs wird der Teig manchmal schon etwas braun. Das ist aber nicht so schlimm, wenn es nur kleine Bereiche sind. Der 'Teigbruch' wird dann einfach mit eingerollt.</p>
+          <p class="hint" lng-tag="instruct-step6-hint"><span class="hint-header">Tipp: </span>Am Rand des Backblechs wird der Teig manchmal schon etwas braun. Das ist aber nicht so schlimm, wenn es nur kleine Bereiche sind. Der 'Teigbruch' wird dann einfach mit eingerollt.</p>
         </div>
       </div>
     </div>
@@ -221,18 +221,18 @@
           <div class="ingredient-image padding-top"><img src="../images/step-7.jpeg" alt="cake larger roll"></div>
         </div>
         <div class="col s12 m7">
-          <h3><span class="handwriting recipe-step">6 Einrollen</span></h3>
-          <p>
+          <h3 lng-tag="instruct-step-header7"><span class="handwriting recipe-step">6 Einrollen</span></h3>
+          <p lng-tag="instruct-step7">
             Nach der Backzeit die Backpapierfolie mit der Kuchenlage vorsichtig herausheben und auf eine flache Unterlage, zB. Tisch legen. Vorsicht, der Teig ist heiß!
             Nun könnt ihr die Goiabada Creme dünn mit einem Spatel auf den Teig streichen.
             Danach den Teig mit der langen Seite zu dir eng aufrollen. Dazu am Besten die Backpapierfolie nutzen oder ihr versucht es mit der Hand.
             Danach die Rolle zu Seite legen.
           </p>
-          <p>
+          <p lng-tag="instruct-step8">
             Die nächste Teiglage wird dann wieder mit Goiabada eingestrichen und um die Teigrolle gerollt.
             Diesen Schritt wiederholt ihr nun mit allen Teiglagen solange bis eine große Teigrolle - der Kuchen entsteht.
           </p>
-          <p class="hint"><span class="hint-header">Tipp: </span>Falls ihr mehrere Backbleche zur Verfügung habt und mehrere Teige vorbereitet habt, dann könnt ihr nun schon den nächste Teig in den Backofen geben. Achtung! Am Besten einen Wecker stellen, damit der Teig nicht verbrennt.</p>
+          <p class="hint" lng-tag="instruct-step8-hint"><span class="hint-header">Tipp: </span>Falls ihr mehrere Backbleche zur Verfügung habt und mehrere Teige vorbereitet habt, dann könnt ihr nun schon den nächste Teig in den Backofen geben. Achtung! Am Besten einen Wecker stellen, damit der Teig nicht verbrennt.</p>
         </div>
       </div>
     </div>
@@ -246,8 +246,8 @@
     <div class="container">
       <div class="row">
         <div class="col s12 m12 center">
-          <h3><span class="handwriting recipe-step">Material und Gerätschaften</span></h3>
-          <p>Hier stelle ich euch die Gerätschaften und Werkzeuge vor mit denen ich arbeite. Kleiner Hinweis, ich verdiene ein wenig Geld damit, wenn ihr über die Links etwas kaufen solltet ;)</p>
+          <h3 lng-tag="header-equipment"><span class="handwriting recipe-step">Material und Gerätschaften</span></h3>
+          <p lng-tag="header-equipment-subtitle">Hier stelle ich euch die Gerätschaften und Werkzeuge vor mit denen ich arbeite. Kleiner Hinweis, ich verdiene ein wenig Geld damit, wenn ihr über die Links etwas kaufen solltet ;)</p>
         </div>
         <!-- begin cards row 1 -->
         <div class="row">
@@ -264,8 +264,8 @@
               </div>
               <a href="https://amzn.to/4177rt8">
                 <div class="card-content">
-                  <span class="card-title">Teigverteiler</span>
-                  <p class="small-text">WMF Profi Plus Crepes Verteiler 19 cm. Damit könnt ihr prima den Teig verteilen. Ich habe einiges ausprobiert und kam mit diesem Gerät am besten zurecht.</p>
+                  <span class="card-title" lng-tag="spatel">Teigverteiler</span>
+                  <p class="small-text" lng-tag="spatel-descrip">WMF Profi Plus Crepes Verteiler 19 cm. Damit könnt ihr prima den Teig verteilen. Ich habe einiges ausprobiert und kam mit diesem Gerät am besten zurecht.</p>
                 </div>
               </a>
             </div>
@@ -283,8 +283,8 @@
               </div>
               <a href="https://amzn.to/3lzWDTU">
                 <div class="card-content">
-                  <span class="card-title">Backblech</span>
-                  <p class="small-text">Ich habe Bleche direkt aus Recife Brasilien mitgebracht, aber ihr könnt natürlich ganz normale Backbleche verwenden. Ein paar Extrableche schaden nicht und ihr könnt mehr Teige fürs Backen vorbereiten. Dies spart euch einiges an Zeit.</p>
+                  <span class="card-title" lng-tag="tray">Backblech</span>
+                  <p class="small-text" lng-tag="tray-descrip">Ich habe Bleche direkt aus Recife Brasilien mitgebracht, aber ihr könnt natürlich ganz normale Backbleche verwenden. Ein paar Extrableche schaden nicht und ihr könnt mehr Teige fürs Backen vorbereiten. Dies spart euch einiges an Zeit.</p>
                 </div>
               </a>
             </div>
@@ -302,8 +302,8 @@
               </div>
               <a href="https://amzn.to/3k0U6Ss">
                 <div class="card-content">
-                  <span class="card-title">Backpapier mal anders</span>
-                  <p class="small-text">Dieses Backpapier ist fantastisch. Es ist nicht ganz billig, aber es lohnt sich. Ich habe meine schon für unzählige Kuchen verwendet. Irgendwann zeigen sie natürlich auch Abnutzungserscheinungen, aber sie leisten mir sehr gute Dienste. Ich habe gleich 6 zuhause, damit ich alle Teige vorbereiten kann.</p>
+                  <span class="card-title" lng-tag="backing-paper">Backpapier mal anders</span>
+                  <p class="small-text" lng-tag="backing-paper-descrip">Dieses Backpapier ist fantastisch. Es ist nicht ganz billig, aber es lohnt sich. Ich habe meine schon für unzählige Kuchen verwendet. Irgendwann zeigen sie natürlich auch Abnutzungserscheinungen, aber sie leisten mir sehr gute Dienste. Ich habe gleich 6 zuhause, damit ich alle Teige vorbereiten kann.</p>
                 </div>
               </a>
             </div>
@@ -325,8 +325,8 @@
               </div>
               <a href="https://amzn.to/3K4I2dh">
                 <div class="card-content">
-                  <span class="card-title">Goiabada - Guavenpaste</span>
-                  <p class="small-text">Die Goiabada Cremosa hat sich am als Beste herausgestellt. Sie ist sehr fruchtig und intensiv im Geschmack. Leider ist sie nicht so einfach zu bekommen. Aber mit etwas Glück könnt ihr sie hier bestellen. Oder ihr habt ein 'latino' Geschäft bei euch?!</p>
+                  <span class="card-title" lng-tag="goiabada-jam">Goiabada - Guavenpaste</span>
+                  <p class="small-text" lng-tag="goiabada-jam-descrip">Die Goiabada Cremosa hat sich am als Beste herausgestellt. Sie ist sehr fruchtig und intensiv im Geschmack. Leider ist sie nicht so einfach zu bekommen. Aber mit etwas Glück könnt ihr sie hier bestellen. Oder ihr habt ein Geschäft, welches Lateinamerikanische Produkte verkauft, bei euch?!</p>
                 </div>
               </a>
             </div>
@@ -344,8 +344,8 @@
               </div>
               <a href="https://amzn.to/3xqLJmc">
                 <div class="card-content">
-                  <span class="card-title">Spatel</span>
-                  <p class="small-text">Mit diesem Spatel kannst du die Füllung auf dem Teig gut und gleichmäßig verstreichen.</p>
+                  <span class="card-title" lng-tag="spatel2">Spatel</span>
+                  <p class="small-text" lng-tag="spatel2-descript">Mit diesem Spatel kannst du die Füllung auf dem Teig gut und gleichmäßig verstreichen.</p>
                 </div>
               </a>
             </div>
@@ -363,8 +363,8 @@
               </div>
               <a href="https://amzn.to/3XxvluS">
                 <div class="card-content">
-                  <span class="card-title">Messbecher</span>
-                  <p class="small-text">Super praktisch. Einfach 250g Mehl oder Zucker einfüllen fertig.</p>
+                  <span class="card-title" lng-tag="measuring-cup">Messbecher</span>
+                  <p class="small-text" lng-tag="measuring-cup-descrip">Super praktisch. Einfach 250g Mehl oder Zucker einfüllen fertig.</p>
                 </div>
               </a>
             </div>
@@ -393,7 +393,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Bolo de Rolo</h5>
-          <p class="grey-text text-lighten-4">Du möchtest gern mehr über mich erfahren oder du hast eine Frage? Du erreichst mich über Bolo.de.Rolo.Berlin@gmail.com. Ich freue mich über deine Nachricht.</p>
+          <p class="grey-text text-lighten-4" lng-tag="more-info-footer">Du möchtest gern mehr über mich erfahren oder du hast eine Frage? Du erreichst mich über Bolo.de.Rolo.Berlin@gmail.com. Ich freue mich über deine Nachricht.</p>
         </div>
       </div>
     </div>
@@ -404,7 +404,7 @@
             <img class="brand-figure" id="chamaeleon-footer-brand" src="../images/chamaeleon.png" alt="chamaleon-symbol-footer">
             <p>copyright @theresamannschatz.design 2023</p>
           </a>
-          <a class="grey-text text-lighten-4" href="../imprint/index.html">Impressum</a>
+          <a class="grey-text text-lighten-4" href="../imprint/index.html" lng-tag="imprint">Impressum</a>
           <!-- analytics tracker -->
           <!-- Begin Web-Stat code v 7.0 -->
           <div class="stats-wrapper">
