--- a/recipe/index.html
+++ b/recipe/index.html
@@ -53,7 +53,7 @@
         <li><a href="../index.html" lng-tag="home">Übersicht</a></li>
         <li><a href="../recipe/index.html" lng-tag="recipe">Rezept</a></li>
         <li><a href="../background/index.html" lng-tag="background">Hintergrund</a></li>
-        <!-- todo: style and add to other pages -->
+        <!-- translation select -->
         <li><a href="javascript:void(0)" id="enTranslator">EN</a></li>
         <li><a href="javascript:void(0)" id="deTranslator">DE</a></li>
       </ul>
@@ -62,7 +62,7 @@
         <li><a href="../index.html" lng-tag="home">Übersicht</a></li>
         <li><a href="../recipe/index.html" lng-tag="recipe">Rezept</a></li>
         <li><a href="../background/index.html" lng-tag="background">Hintergrund</a></li>
-        <!-- todo: style and add to other pages -->
+        <!-- mobile translation select -->
         <li><a href="javascript:void(0)" id="enTranslator">EN</a></li>
         <li><a href="javascript:void(0)" id="deTranslator">DE</a></li>
       </ul>
