Try: enabling mobile language select

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <li><a href="recipe/index.html" lng-tag="recipe">Rezept</a></li>
         <li><a href="background/index.html" lng-tag="background">Hintergrund</a></li>
         <!-- todo: style and add to other pages -->
-        <li><a href="javascript:void(0)" id="enTranslator">EN</a></li>
-        <li><a href="javascript:void(0)" id="deTranslator">DE</a></li>
+        <li><a href="javascript:void(0)" class="enTranslator">EN</a></li>
+        <li><a href="javascript:void(0)" class="deTranslator">DE</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
@@ -66,8 +66,8 @@
         <li><a href="recipe/index.html" lng-tag="recipe">Rezept</a></li>
         <li><a href="background/index.html" lng-tag="background">Hintergrund</a></li>
         <!-- todo: style and add to other pages -->
-        <li><a href="javascript:void(0)" id="enTranslator">EN</a></li>
-        <li><a href="javascript:void(0)" id="deTranslator">DE</a></li>
+        <li><a href="javascript:void(0)" class="enTranslator">EN</a></li>
+        <li><a href="javascript:void(0)" class="deTranslator">DE</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
