Add translation script to background page

--- a/background/index.html
+++ b/background/index.html
@@ -269,5 +269,8 @@
       $('.materialboxed').materialbox();
     });
   </script>
+  <!-- translation scripts -->
+  <script src="../js/translate.js"></script>
+  <script src="../js/index.js"></script>
   </body>
 </html>
