--- a/background/index.html
+++ b/background/index.html
@@ -54,8 +54,8 @@
         <li><a href="../recipe/index.html" lng-tag="recipe">Rezept</a></li>
         <li><a href="../background/index.html" lng-tag="background">Hintergrund</a></li>
         <!-- translation select -->
-        <li><a href="javascript:void(0)" id="enTranslator">EN</a></li>
-        <li><a href="javascript:void(0)" id="deTranslator">DE</a></li>
+        <li><a href="javascript:void(0)" class="enTranslator">EN</a></li>
+        <li><a href="javascript:void(0)" class="deTranslator">DE</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
@@ -63,8 +63,8 @@
         <li><a href="../recipe/index.html" lng-tag="recipe">Rezept</a></li>
         <li><a href="../background/index.html" lng-tag="background">Hintergrund</a></li>
         <!-- mobile translation select -->
-        <li><a href="javascript:void(0)" id="enTranslator">EN</a></li>
-        <li><a href="javascript:void(0)" id="deTranslator">DE</a></li>
+        <li><a href="javascript:void(0)" class="enTranslator">EN</a></li>
+        <li><a href="javascript:void(0)" class="deTranslator">DE</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
