Add translations to imprint page

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Bolo de Rolo - Impressum</title>
+  <title lng-tag="page-title-imprint">Bolo de Rolo - Impressum</title>
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="../apple-icon-57x57.png">
@@ -50,15 +50,21 @@
         <img src="../images/logo.png" alt="bolo de rolo brand logo ">
       </a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="../index.html">Übersicht</a></li>
-        <li><a href="../recipe/index.html">Rezept</a></li>
-        <li><a href="../background/index.html">Hintergrund</a></li>
+        <li><a href="../index.html" lng-tag="home">Übersicht</a></li>
+        <li><a href="../recipe/index.html" lng-tag="recipe">Rezept</a></li>
+        <li><a href="../background/index.html" lng-tag="background">Hintergrund</a></li>
+        <!-- translation select -->
+        <li><a href="javascript:void(0)" class="enTranslator">EN</a></li>
+        <li><a href="javascript:void(0)" class="deTranslator">DE</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="../index.html">Übersicht</a></li>
-        <li><a href="../recipe/index.html">Rezept</a></li>
-        <li><a href="../background/index.html">Hintergrund</a></li>
+        <li><a href="../index.html" lng-tag="home">Übersicht</a></li>
+        <li><a href="../recipe/index.html" lng-tag="recipe">Rezept</a></li>
+        <li><a href="../background/index.html" lng-tag="background">Hintergrund</a></li>
+        <!-- mobile translation select -->
+        <li><a href="javascript:void(0)" class="enTranslator">EN</a></li>
+        <li><a href="javascript:void(0)" class="deTranslator">DE</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -150,7 +156,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Bolo de Rolo</h5>
-          <p class="grey-text text-lighten-4">Du möchtest gern mehr über mich erfahren oder du hast eine Frage? Du erreichst mich über Bolo.de.Rolo.Berlin@gmail.com. Ich freue mich über deine Nachricht.</p>
+          <p class="grey-text text-lighten-4" lng-tag="more-info-footer">Du möchtest gern mehr über mich erfahren oder du hast eine Frage? Du erreichst mich über Bolo.de.Rolo.Berlin@gmail.com. Ich freue mich über deine Nachricht.</p>
         </div>
       </div>
     </div>
@@ -161,7 +167,7 @@
             <img class="brand-figure" id="chamaeleon-footer-brand" src="../images/chamaeleon.png" alt="chamaleon-symbol-footer">
             <p>copyright @theresamannschatz.design 2023</p>
           </a>
-          <a class="grey-text text-lighten-4" href="../imprint/index.html">Impressum</a>
+          <a class="grey-text text-lighten-4" href="../imprint/index.html" lng-tag="imprint">Impressum</a>
           <!-- analytics tracker -->
           <!-- Begin Web-Stat code v 7.0 -->
           <div class="stats-wrapper">
