--- a/imprint/index.html
+++ b/imprint/index.html
@@ -190,5 +190,8 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
+  <!-- translation scripts -->
+  <script src="../js/translate.js"></script>
+  <script src="../js/index.js"></script>
   </body>
 </html>
