--- a/imprint/index.html
+++ b/imprint/index.html
@@ -73,7 +73,7 @@
 
   <div id="imprint-start-section">
     <div class="container center">
-      <h3 class="section-header">Impressum</h3>
+      <h3 class="section-header" lng-tag="imprint">Impressum</h3>
       <div class="left-align">
         <address class="left-align">
           Bolo de Rolo Berlin <br>
