Try to fix onload event

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -43,7 +43,7 @@
 
   gtag('config', 'G-RSWEXQM7FS');
 </script>
-<body onload="checkCookies()">
+<body onload="checkCookies();">
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="../index.html" class="brand-logo">
